tests/ui/parser/issues/issue-24197.stderr
error: expected a pattern, found an expression
  --> $DIR/issue-24197.rs:2:9
   |
LL |     let buf[0] = 0;
   |         ^^^^^^ arbitrary expressions are not allowed in patterns

error: aborting due to 1 previous error

