tests/ui/parser/issues/issue-24197.rs
fn main() {
    let buf[0] = 0; //~ error: expected a pattern, found an expression
}
